<resources>
    <string name="app_name">Quiz</string>
    <string name="start_your_quiz_now">Start Your Quiz Now</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="select_any_one_answer">select atleast one answer</string>
    <string name="question">Question :</string>
    <string name="question_title">Question</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="find_the_correct_solution_for">Find the correct solution for </string>
    <string name="no">No</string>
    <string name="correct_ans">Correct Ans.</string>
    <string name="given_ans">Given Ans.</string>
    <string name="correct">Correct</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="given_answer">Given Answer</string>
    <string name="correct_or_not">Correct or Not</string>
    <string name="summary">Summary</string>
    <string name="total_marks">Total marks :</string>
    <string name="obtained_marks">Obtained Marks :</string>
    <string name="percentage">Percentage</string>
    <string name="_15">15</string>
    <string name="skipped_questions">Skipped Questions :</string>
    <string name="wrong_questions">Wrong Questions :</string>
    <string name="exit_msg">Please click BACK again to exit</string>
    <string name="note">Note</string>
    <string name="before_you_start">Before You Start !</string>
    <string name="_15_multiple_questions">✵ 15 multiple questions.</string>
    <string name="save_and_next">✵ Click Next button to submit your answer.</string>
    <string name="_30_seconds_per_question">✵ 30 Seconds per question.</string>
    <string name="check_your_score_after_submit_all_answer">✵ You can check and compare your answer after submitting all answer.</string>
</resources>
